test/fail/internal/expr_after_return.lly
#[
SyntaxError: Statement(s) after 'return' will not execute.
Where: File "expr_after_return.lly" at line 9
]#

define f( => integer)
{
    return 1
    var v = 2
}
